example/secondfile/objects/AVPN_3years_OveragePrices__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Overage price list for the AVPN 3 years</description>
    <fields>
        <fullName>Master_Agent__c</fullName>
        <description>Contains the price for the Master Agent</description>
        <inlineHelpText>Contains the price for the Master Agent</inlineHelpText>
        <label>Master Agent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Platinum_Elite__c</fullName>
        <description>Contains the price for the Platinum Elite user</description>
        <inlineHelpText>Contains the price for the Platinum Elite user</inlineHelpText>
        <label>Platinum Elite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Platinum__c</fullName>
        <description>Contains the price for the Platinum user</description>
        <inlineHelpText>Contains the price for the Platinum user</inlineHelpText>
        <label>Platinum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>AVPN_3years_OveragePrices</label>
    <listViews>
        <fullName>X3_Years</fullName>
        <columns>NAME</columns>
        <columns>Master_Agent__c</columns>
        <columns>Platinum__c</columns>
        <columns>Platinum_Elite__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>notEqual</operation>
        </filters>
        <label>3 Years</label>
    </listViews>
</CustomObject>